--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           toolchain: stable
           default: true
           override: true
+          components: clippy
+    - name: check
+      run: cargo clippy --all-targets --all-features -- -D warnings
     - name: run tests
       run: cargo test --all-features -- --test-threads=1
 
@@ -34,5 +37,8 @@ jobs:
           toolchain: stable
           default: true
           override: true
+          components: clippy
+    - name: check
+      run : cargo clippy --all-targets --all-features -- -D warnings
     - name: run tests
       run: cargo test --all-features -- --test-threads=1 
